--- a/src/main/webapp/i18n/es/factura.json
+++ b/src/main/webapp/i18n/es/factura.json
@@ -15,9 +15,11 @@
             "detail": {
                 "title": "Factura"
             },
+            "numeroDeFactura": "Numero De Factura",
             "fecha": "Fecha",
             "total": "Total",
             "abonado": "Abonado",
+            "estadoDeFactura": "Estado De Factura",
             "cliente": "Cliente",
             "abono": "Abono"
         }
